# Brick-

./: .gitignore  Brick.cpp  Brick.h  CMakeLists.txt  README.md
src/: DeathScreen.cpp  ball.cpp  brick.cpp  main.cpp  paddle.cpp
src/Header/: ball.h  brick.h  paddle.h
